--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: tuto kangapi
 email: pourlessiteswebnuls@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ce site web regroupe des tutos sur l'ensemble des choses de programmation que j'ai fait et dont j'aimerais pouvoir refaire dans quelque années !
-baseurl: "/Jekyll" # the subpath of your site, e.g. /blog
-url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "Jekyll-V1/" # the subpath of your site, e.g. /blog
+url: "https://kangapi.github.io/Jekyll-V1/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kangapi_
 github_username:  kangapi
 
